Add CH4 emissions map with Leaflet and GeoTIFF support

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,18 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+Thumbs.db
+.DS_Store
+
+# Large data files (optional - uncomment if you don't want to commit large TIF files)
+# *.tif
+# *.tiff
