--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "georaster-layer-for-leaflet": "^4.1.2",
     "leaflet": "^1.9.4",
     "next": "16.0.1",
+    "papaparse": "^5.5.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
